--- a/.github/workflows/798x-UBOOT.yml
+++ b/.github/workflows/798x-UBOOT.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
   WRT_TARGET: MTK-798x
   WRT_REPO: https://github.com/ddyjyj/bl-mt798x.git
   WRT_BRANCH: master
@@ -22,7 +22,7 @@ jobs:
       - name: Delete old Releases and Workflows
         uses: ophub/delete-releases-workflows@main
         with:
-          gh_token: ${{secrets.GITHUB_TOKEN}}
+          gh_token: ${{secrets.GH_TOKEN}}
           delete_releases: true
           releases_keep_latest: 0
           delete_tags: true
