--- a/.github/workflows/798x-UBOOT.yml
+++ b/.github/workflows/798x-UBOOT.yml
@@ -24,17 +24,17 @@ jobs:
         with:
           gh_token: ${{secrets.GH_TOKEN}}
           delete_releases: true
-          releases_keep_latest: 0
+          releases_keep_latest: 4
           delete_tags: true
           delete_workflows: true
-          workflows_keep_day: 0
+          workflows_keep_day: 2
 
   build:
     runs-on: ubuntu-latest
     needs: cleanup
     strategy:
       fail-fast: false
-      max-parallel: 4
+     #max-parallel: 4
       matrix:
         WRT_ATF: [atf-20220606-637ba581b]
         WRT_MTK: [uboot-mtk-20230718-09eda825]
