--- a/.github/workflows/798x-UBOOT.yml
+++ b/.github/workflows/798x-UBOOT.yml
@@ -79,7 +79,7 @@ jobs:
           # 收集 uboot 配置并生成 Uboots.txt
           declare -A lines_map
           while IFS= read -r f; do
-            [[ $(basename "$f") =~ ^(mt798[16])_(.*)_defconfig$ ]] || continue
+            [[ $(basename "$f") =~ ^(mt7981)_(.*)_defconfig$ ]] || continue
             soc="${BASH_REMATCH[1]}"
             rest="${BASH_REMATCH[2]}"
             board="${rest%_multi_layout}"
@@ -90,7 +90,7 @@ jobs:
             elif [[ -z "${lines_map[$key]}" ]]; then
               lines_map["$key"]="SOC=$soc BOARD=$board ./build.sh"
             fi
-          done < <(find ./wrt/uboot-mtk-*/configs -type f -name 'mt798*defconfig' | grep -iE 'mt798[16]_' | grep -ivE 'rfb|fpga')
+          done < <(find ./wrt/uboot-mtk-*/configs -type f -name 'mt798*defconfig' | grep -iE 'mt7981_' | grep -ivE 'rfb|fpga')
 
           # 输出 Uboots.txt
           printf "%s\n" "${lines_map[@]}" | sort > ./Uboots.txt
