--- a/.github/workflows/798x-25-UBOOT.yml
+++ b/.github/workflows/798x-25-UBOOT.yml
@@ -36,8 +36,8 @@ jobs:
       fail-fast: false
      #max-parallel: 4
       matrix:
-        WRT_ATF: [atf-20220606-637ba581b]
-        WRT_MTK: [uboot-mtk-20230718-09eda825]
+        WRT_ATF: [atf-20250711]
+        WRT_MTK: [uboot-mtk-20250711]
 
     steps:
       - name: Checkout Projects
