--- a/.github/workflows/新MT7981-rax300me-an8855-UBOOT.yml
+++ b/.github/workflows/新MT7981-rax300me-an8855-UBOOT.yml
@@ -13,8 +13,7 @@ permissions: write-all
 
 jobs:
   cleanup:
-    # ！！！必须是 ubuntu-20.04，否则必报 FIP 错误 ！！！
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04  # 使用 22.04，不会卡队列
     steps:
       - name: Delete old Releases and Workflows
         uses: ophub/delete-releases-workflows@main
@@ -27,8 +26,7 @@ jobs:
           workflows_keep_day: 2
 
   build:
-    # ！！！必须是 ubuntu-20.04，否则必报 FIP 错误 ！！！
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04  # 使用 22.04
     needs: cleanup
     strategy:
       fail-fast: false
@@ -45,7 +43,14 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           sudo -E apt -yqq update
-          sudo -E apt -yqq install dos2unix bison build-essential device-tree-compiler flex gcc-aarch64-linux-gnu libssl-dev qemu-user-static
+          
+          # 核心修复：强制降级 binutils 到 2.34 版本（Ubuntu 20.04 的版本）
+          # 这样可以避免新版 linker 的 RWX segment 权限检查
+          sudo -E apt -yqq install dos2unix bison build-essential device-tree-compiler flex libssl-dev qemu-user-static
+          
+          # 安装旧版本的 gcc-aarch64-linux-gnu，它会自动拉取兼容的 binutils
+          sudo -E apt -yqq install gcc-aarch64-linux-gnu=4:11.2.0--1ubuntu1 binutils-aarch64-linux-gnu=2.38-4ubuntu2
+          
           sudo -E systemctl daemon-reload
           sudo -E timedatectl set-timezone "Asia/Shanghai"
 
@@ -71,17 +76,11 @@ jobs:
           UBOOT_PATH="./wrt/${{matrix.WRT_MTK}}"
           ATF_PATH="./wrt/${{matrix.WRT_ATF}}"
           
-          echo "=== Debug: Starting File Generation ==="
-          
-          # -------------------------------------------------------
-          # 1. 强制写入正确的独立版 DTS
-          # -------------------------------------------------------
+          echo "=== 写入独立的 DTS 文件 ==="
           TARGET_DTS_NAME="mt7981-cmcc-rax3000me-an8855"
           TARGET_DTS_PATH="$UBOOT_PATH/arch/arm/dts/$TARGET_DTS_NAME.dts"
           
-          echo "📝 Generating $TARGET_DTS_NAME.dts..."
-          
-          cat > "$TARGET_DTS_PATH" <<EOF
+          cat > "$TARGET_DTS_PATH" <<'EOF'
           // SPDX-License-Identifier: GPL-2.0
           /dts-v1/;
           #include "mt7981.dtsi"
@@ -193,73 +192,10 @@ jobs:
           };
           EOF
           
-          # -------------------------------------------------------
-          # 2. 强制写入匹配的 Defconfig
-          # -------------------------------------------------------
-          TARGET_DEFCONFIG_NAME="mt7981_rax3000me_an8855_defconfig"
-          echo "📝 Generating $TARGET_DEFCONFIG_NAME..."
+          echo "✅ DTS 已写入"
           
-          cat > "$UBOOT_PATH/configs/$TARGET_DEFCONFIG_NAME" <<EOF
-          CONFIG_ARM=y
-          CONFIG_POSITION_INDEPENDENT=y
-          CONFIG_ARCH_MEDIATEK=y
-          CONFIG_TEXT_BASE=0x41e00000
-          CONFIG_SYS_MALLOC_F_LEN=0x4000
-          CONFIG_NR_DRAM_BANKS=1
-          CONFIG_ENV_SIZE=0x40000
-          CONFIG_ENV_OFFSET=0x400000
-          CONFIG_DEFAULT_DEVICE_TREE="$TARGET_DTS_NAME"
-          CONFIG_SPL_TEXT_BASE=0x201000
-          CONFIG_TARGET_MT7981=y
-          CONFIG_DEBUG_UART_BASE=0x11002000
-          CONFIG_DEBUG_UART_CLOCK=40000000
-          CONFIG_SYS_LOAD_ADDR=0x46000000
-          CONFIG_DEBUG_UART=y
-          CONFIG_FIT=y
-          CONFIG_BOOTDELAY=3
-          CONFIG_DEFAULT_FDT_FILE="$TARGET_DTS_NAME"
-          CONFIG_SYS_CONSOLE_IS_IN_ENV=y
-          CONFIG_LOGLEVEL=7
-          CONFIG_HUSH_PARSER=y
-          CONFIG_SYS_PROMPT="MT7981> "
-          CONFIG_CMD_BOOTMENU=y
-          CONFIG_CMD_MMC=y
-          CONFIG_CMD_PART=y
-          CONFIG_CMD_PING=y
-          CONFIG_CMD_DHCP=y
-          CONFIG_CMD_FAT=y
-          CONFIG_CMD_FS_GENERIC=y
-          CONFIG_ENV_IS_IN_MMC=y
-          CONFIG_SYS_RELOC_GD_ENV_ADDR=y
-          CONFIG_NET_RANDOM_ETHADDR=y
-          CONFIG_REGMAP=y
-          CONFIG_SYSCON=y
-          CONFIG_CLK=y
-          CONFIG_MMC=y
-          CONFIG_DM_MMC=y
-          CONFIG_MMC_MTK=y
-          CONFIG_PHY_FIXED=y
-          CONFIG_MEDIATEK_ETH=y
-          CONFIG_PINCTRL=y
-          CONFIG_PINCONF=y
-          CONFIG_PINCTRL_MT7981=y
-          CONFIG_POWER_DOMAIN=y
-          CONFIG_MTK_POWER_DOMAIN=y
-          CONFIG_DM_REGULATOR=y
-          CONFIG_DM_REGULATOR_FIXED=y
-          CONFIG_DM_SERIAL=y
-          CONFIG_MTK_SERIAL=y
-          CONFIG_HEXDUMP=y
-          EOF
-          
-          # 复制 Defconfig 到 ATF 目录 (防止 ATF 找不到)
-          cp -f "$UBOOT_PATH/configs/$TARGET_DEFCONFIG_NAME" "$ATF_PATH/configs/"
-
-          # -------------------------------------------------------
-          # 3. 生成编译任务
-          # -------------------------------------------------------
+          # 生成编译命令
           echo "SOC=mt7981 BOARD=rax3000me_an8855 ./build.sh" > ./Uboots.txt
-          
           echo "WRT_TYPE_7981=RAX3000ME-AN8855" >> $GITHUB_ENV
           mv -f Uboots.txt Uboots.sh
           chmod +x Uboots.sh
