--- a/.github/workflows/新MT7981-rax300me-an8855-UBOOT.yml
+++ b/.github/workflows/新MT7981-rax300me-an8855-UBOOT.yml
@@ -1,4 +1,4 @@
-name: 新mt7981-rax300me-an8855-UBOOT
+name: 7981-rax300me-an8855-UBOOT
 
 on:
   workflow_dispatch:
@@ -52,8 +52,6 @@ jobs:
           sudo mkdir -p /mnt/build_wrt
           sudo chown $USER:$USER /mnt/build_wrt
           sudo ln -s /mnt/build_wrt $GITHUB_WORKSPACE/wrt
-          sed -i '/^TF_LDFLAGS\s*+=.*--fatal-warnings/a TF_LDFLAGS += -Wl,--no-warn-rwx-segments' "$ATF_PATH/Makefile"
-
 
       - name: Initialization Values
         run: |
@@ -73,12 +71,29 @@ jobs:
           UBOOT_PATH="./wrt/${{matrix.WRT_MTK}}"
           ATF_PATH="./wrt/${{matrix.WRT_ATF}}"
           
+          echo "=== 调试信息 ==="
+          echo "UBOOT_PATH=$UBOOT_PATH"
+          echo "ATF_PATH=$ATF_PATH"
+          ls -la ./wrt/
+          
           echo "=== 修复 ATF linker RWX 警告 ==="
-          # 核心修复：在 ATF Makefile 中禁用 RWX segment 警告
           if [ -f "$ATF_PATH/Makefile" ]; then
-            # 在 TF_LDFLAGS 添加 --no-warn-rwx-segments
-            sed -i '/^TF_LDFLAGS\s*+=.*--fatal-warnings/a TF_LDFLAGS += -Wl,--no-warn-rwx-segments' "$ATF_PATH/Makefile"
-            echo "✅ ATF Makefile 已修改"
+            # 方法1：在 TF_LDFLAGS 添加 --no-warn-rwx-segments
+            if grep -q "TF_LDFLAGS.*--fatal-warnings" "$ATF_PATH/Makefile"; then
+              sed -i '/^TF_LDFLAGS\s*+=.*--fatal-warnings/a TF_LDFLAGS += -Wl,--no-warn-rwx-segments' "$ATF_PATH/Makefile"
+              echo "✅ 方法1: 在 TF_LDFLAGS 添加成功"
+            else
+              # 方法2：如果没找到 --fatal-warnings，尝试直接在 LDFLAGS 定义处添加
+              sed -i '/^TF_LDFLAGS\s*+=/a TF_LDFLAGS += -Wl,--no-warn-rwx-segments' "$ATF_PATH/Makefile"
+              echo "✅ 方法2: 添加到 LDFLAGS 默认位置"
+            fi
+            
+            # 验证修改
+            echo "=== 验证 Makefile 修改 ==="
+            grep -A 2 "TF_LDFLAGS" "$ATF_PATH/Makefile" | head -10
+          else
+            echo "❌ 错误: ATF Makefile 不存在: $ATF_PATH/Makefile"
+            exit 1
           fi
           
           echo "=== 写入独立的 DTS 文件 ==="
@@ -197,7 +212,7 @@ jobs:
           };
           EOF
           
-          echo "✅ DTS 已写入"
+          echo "✅ DTS 已写入到: $TARGET_DTS_PATH"
           
           # 生成编译命令
           echo "SOC=mt7981 BOARD=rax3000me_an8855 ./build.sh" > ./Uboots.txt
